--- a/common_services/syndication_presentation/pom.xml
+++ b/common_services/syndication_presentation/pom.xml
@@ -31,19 +31,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.58-SNAPSHOT</version>
+		<version>1.0.58</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>syndication_presentation</artifactId>
 	<name>syndication_presentation</name>
-	<version>1.0.42-SNAPSHOT</version>
+	<version>1.0.42</version>
 	<packaging>war</packaging>
 
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/syndication_presentation</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/common_services/syndication_presentation</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.58/syndication_presentation</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/common_services-1.0.58/syndication_presentation</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.58/syndication_presentation</url>
 	</scm>
 	<build>
 		<plugins>
@@ -99,13 +99,13 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.61-SNAPSHOT</version>
+			<version>1.3.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.58-SNAPSHOT</version>
+			<version>1.1.58</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
