extension waggon-ssh added

--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -367,6 +367,11 @@
 				<artifactId>wagon-webdav</artifactId>
 				<version>1.0-beta-2</version>
 			</extension>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>1.0-beta-2</version>
+			</extension>
 		</extensions>
 	</build>
 
