--- a/common_services/aa_logic/pom.xml
+++ b/common_services/aa_logic/pom.xml
@@ -31,14 +31,14 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.59-SNAPSHOT</version>
+		<version>1.0.58</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>aa_logic</artifactId>
 	<packaging>jar</packaging>
 	<name>aa_logic</name>
-	<version>0.1.2-SNAPSHOT</version>
+	<version>0.1.2</version>
 	<build>
 		<resources>
 			<resource>
@@ -120,11 +120,17 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.59-SNAPSHOT</version>
+			<version>1.1.58</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies />
 	</dependencyManagement>
+
+  <scm>
+    <connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/aa_logic-0.1.2</connection>
+    <developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/aa_logic-0.1.2</developerConnection>
+    <url>https://subversion.mpdl.mpg.de/repos/common/tags/aa_logic-0.1.2</url>
+  </scm>
 </project>
