--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -799,7 +799,7 @@
 			<distributionManagement>
 				<site>
 					<id>website</id>
-					<url>scp://pubman.mpdl.mpg.de:/srv/www/staging</url>
+					<url>scp://pubman.mpdl.mpg.de:/srv/www/staging/projects/pubman</url>
 				</site>
 			</distributionManagement>
 		
