--- a/common_services/exportmanager_ear/pom.xml
+++ b/common_services/exportmanager_ear/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.45-SNAPSHOT</version>
+		<version>1.0.44</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
