--- a/common_services/aa_presentation/pom.xml
+++ b/common_services/aa_presentation/pom.xml
@@ -39,6 +39,13 @@
 	<packaging>war</packaging>
 	<name>aa_presentation</name>
 	<version>0.1.4-SNAPSHOT</version>
+	
+	<scm>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/aa_presentation</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/aa_presentation</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+	</scm>
+	
 	<build>
 		<resources>
 			<resource>
