--- a/common_services/sword_presentation/pom.xml
+++ b/common_services/sword_presentation/pom.xml
@@ -38,6 +38,12 @@
 	<name>sword_presentation</name>
 	<version>1.0.39-SNAPSHOT</version>
 	<packaging>war</packaging>
+	
+	<scm>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/sword_presentation</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/sword_presentation</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+	</scm>
 
 
 	<build>
