dubious "cd" removed
Former-commit-id: 03b6a8f22cea5c8969a1aeb91a9b06ad1502cf5b

--- a/pubman/pubman_logic_ear/pom.xml
+++ b/pubman/pubman_logic_ear/pom.xml
@@ -814,7 +814,7 @@
 								</goals>
 							</execution>
 						</executions>
-						<configuration>cd
+						<configuration>
 							<container>
 								<containerId>jboss42x</containerId>
 								<zipUrlInstaller>
