--- a/common_services/batchprocessmanager/src/main/resources/bpm.properties
+++ b/common_services/batchprocessmanager/src/main/resources/bpm.properties
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006-2010 Fachinformationszentrum Karlsruhe Gesellschaft
+# Copyright 2006-2012 Fachinformationszentrum Karlsruhe Gesellschaft
 # für wissenschaftlich-technische Information mbH and Max-Planck-
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
@@ -105,8 +105,8 @@ escidoc.validation.source.classname=${escidoc.validation.source.classname}
 escidoc.validation.refresh.interval=${escidoc.validation.refresh.interval}
 
 # Used for validation initialization
-framework.admin.username=roland
-framework.admin.password=Htpw55
+framework.admin.username=${framework.admin.username}
+	framework.admin.password=${framework.admin.password}
 
 # eSciDoc-ObjId of the external Organisation
 escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.id}
