Changed dependencies from 7.0.1 to 7.1.0
Former-commit-id: 27867d4279f742003a5b3e236875c074630b541c

--- a/pubman/pubman_presentation/pom.xml
+++ b/pubman/pubman_presentation/pom.xml
@@ -83,7 +83,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_logic</artifactId>
-			<version>7.0.1-SNAPSHOT</version>
+			<version>7.1.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -104,6 +104,16 @@
 			<version>3.0.1</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+	      <groupId>org.richfaces.ui</groupId>
+	      <artifactId>richfaces-ui</artifactId>
+	      <version>3.3.3.Final</version>
+    	</dependency>
+    	<dependency>
+	      <groupId>org.richfaces.framework</groupId>
+	      <artifactId>richfaces-impl</artifactId>
+	      <version>3.3.3.Final</version>
+	    </dependency>
 	</dependencies>
 	
 </project>
