Added Apache Tika for correct mimetype detection of uploaded files. Bugfix for Richfaces File Upload, which always uses 'application/octet-stream' in Flash mode
Former-commit-id: abccad73c8f3d9a47d5e6609f8d60161e2e0c041

--- a/pubman/pubman_presentation/pom.xml
+++ b/pubman/pubman_presentation/pom.xml
@@ -117,6 +117,11 @@
 	      <artifactId>richfaces-impl</artifactId>
 	      <version>3.3.3.Final</version>
 	    </dependency>
+	    <dependency>
+		  <groupId>org.apache.tika</groupId>
+		  <artifactId>tika-core</artifactId>
+		  <version>1.1</version>
+		</dependency>
 	 
 	</dependencies>
 	
