Resolved [PUBMAN-2251] - Enable CoNE matching for import formats other than "eDoc" Resolved [PUBMAN-2256] - EndNote import/export bugs GUI updated for [PUBMAN-2234] - Block the author field when a CoNE author is chosen from the auto suggest list
Former-commit-id: 3decf68acdc2b6a8def6c5d7ca7c598ebc20254d

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -275,6 +275,8 @@ escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endn
 escidoc.transformation.zfn.stylesheet.filename=${escidoc.transformation.zfn.stylesheet.filename}
 escidoc.transformation.endnote.configuration.filename=${escidoc.transformation.endnote.configuration.filename}
 escidoc.transformation.edoc.configuration.filename=${escidoc.transformation.edoc.configuration.filename}
+escidoc.transformation.ris.configuration.filename=${escidoc.transformation.ris.configuration.filename}
+escidoc.transformation.wos.configuration.filename=${escidoc.transformation.wos.configuration.filename}
 escidoc.transformation.zfn.configuration.filename=${escidoc.transformation.zfn.configuration.filename}
 escidoc.transformation.bibtex.configuration.filename=${escidoc.transformation.bibtex.configuration.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
